# retry-if

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: limited_backoff.rs  simple_backoff.rs
retry-if-macro/: Cargo.toml  README.md
retry-if-macro/src/: lib.rs
retrys-macro/: Cargo.toml
retrys-macro/src/: lib.rs
src/: configuration.rs  lib.rs
tests/: mod.rs  retry_impl_method.rs  retry_impl_method_retry_if.rs  retry_impl_method_should_retry.rs  retry_invalid_configuration.rs  retry_method_with_try.rs  retry_method_with_try_operator.rs  retry_real_return_value.rs  retry_simple_method.rs  retry_simple_method_linear.rs  retry_tracing.rs  retry_trait_impl_method.rs  ui_tests.rs
tests/ui/: retry_missing_args.rs  retry_missing_args.stderr  retry_missing_retry_if.rs  retry_missing_retry_if.stderr  retry_missing_should_retry.rs  retry_missing_should_retry.stderr  retry_on_consuming_function.rs  retry_on_consuming_function.stderr  retry_on_non_function.rs  retry_on_non_function.stderr
