[package]
name = "retry-if"
version = "0.2.2"
edition = "2021"
resolver = "2"
authors = ["Brendan Blanchard"]
description = "A tokio-compatible attribute-macro for decorating methods and functions with an exponential backoff."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/retry-if"
keywords = ["tokio", "async", "retry", "backoff"]
categories = ["asynchronous", "concurrency", "web-programming"]
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
retry-if-macro = { version = "0.2.2", path = "retry-if-macro", default-features = false }
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.97"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
retry-if = { path = ".", features = ["tracing"] }
tokio = { version = "1.38.0", features = ["full", "test-util"] }

[features]
tracing = ["retry-if-macro/tracing"]
