[package]
name = "retry-if"
version = "0.2.3"
edition = "2021"
resolver = "2"
authors = ["Brendan Blanchard"]
description = "A tokio-compatible attribute-macro for decorating methods and functions with an exponential backoff."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/retry-if"
keywords = ["tokio", "async", "retry", "backoff"]
categories = ["asynchronous", "concurrency", "web-programming"]
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
retry-if-macro = { version = "0.2.2", path = "retry-if-macro", default-features = false }
serde = { version = "1.0.209", optional = true, features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.99"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
retry-if = { path = ".", features = ["tracing"] }
tokio = { version = "1.40.0", features = ["full", "test-util"] }
serde_json = "1.0.127"

[features]
default = ["tracing"]
full = ["tracing", "serde"]
tracing = ["retry-if-macro/tracing"]
serde = ["dep:serde"]
