[package]
name = "retry-if-macro"
version = "0.2.1"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "A tokio-compatible attribute-macro for decorating methods and functions with an exponential backoff."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/retry-if-macro"
keywords = ["tokio", "async", "retry", "backoff"]
categories = ["asynchronous", "concurrency", "web-programming"]
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.71", features = ["full", "visit-mut"] }
tracing = { version = "0.1.40", optional = true }

[features]
tracing = ["dep:tracing"]

[lib]
proc-macro = true
